--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,12 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="stylesheet" type="text/css" href="https://www.cs.mun.ca/~h65ped/Public/country%20data%20for%20force%20directed%20graph/flags.css">
   </head>
   <body>
   	<main>
 			<section class="card">
 	 			<h1>Force Directed Graph of State Contiguity</h1>
-				<svg class="chart" width="640" height="480"></svg>
+        <div class="forceBox">
+				  <svg class="chart"></svg>
+        </div>
 			</section>
     </main>
   </body>
