--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,3 +1,64 @@
 
+*
+	margin: 0
+	padding: 0
+	box-sizing: border-box
+
+$light-gradient: #f5baff
+$dark-gradient: #c20fde
+
+@mixin gradient($light, $dark)
+	background: rgba($light,1)
+	background: -moz-linear-gradient(45deg, rgba($light,1) 0%, rgba($dark,1) 100%)
+	background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba($light,1)), color-stop(100%, rgba($dark,1)))
+	background: -webkit-linear-gradient(45deg, rgba($light,1) 0%, rgba($dark,1) 100%)
+	background: -o-linear-gradient(45deg, rgba($light,1) 0%, rgba($dark,1) 100%)
+	background: -ms-linear-gradient(45deg, rgba($light,1) 0%, rgba($dark,1) 100%)
+	background: linear-gradient(45deg, rgba($light,1) 0%, rgba($dark,1) 100%)
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=$light, endColorstr=$dark, GradientType=1 )
+	background-repeat: no-repeat
+	background-attachment: fixed
+
+html, body
+	height: 100%
+	font-family: Helvetica, sans-serif
+	@include gradient($light-gradient, $dark-gradient)
+
 body
-	background-color: grey
+	padding: 40px 0
+	h1
+		margin-bottom: 10px
+		font-size: 32px
+
+.card
+	width: 920px
+	background: white
+	margin: 0 auto
+	padding: 10px
+	text-align: center
+	border-radius: 10px
+	opacity: 0.90
+	.toolTip
+		position: absolute
+		z-index: 2
+		text-align: center
+		width: auto
+		font-size: 18px
+		font-weight: bold
+		padding: 5px
+		border-radius: 5px
+		pointer-events: none
+		box-shadow: 3px 3px 6px rgba(#000, 0.2)
+		background-color: Plum
+		opacity: 0
+
+.forceBox
+	height: 700px
+	min-height: 100px
+	position: relative
+	.chart
+		position: relative
+
+.flag
+	position: absolute
+	user-select: none
